charts/mockery-ai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockery-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockery-ai
  template:
    metadata:
      labels:
        app: mockery-ai
    spec:
      containers:
        - name: mockery-ai
          image: ghcr.io/imdevinc/ai-mockery:latest
          ports:
            - containerPort: 8080
