charts/mockery-ai/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mockery-ai
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: mockery.png
    gethomepage.dev/name: MockeryAI
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - mockery.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mockery-ai
      namespace: mockery-ai
      port: 8080
